fix body overflowing when overlay is open

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,5 +2,5 @@
 @use "../styles/variables" as *;
 
 .home{
-    
+    padding-bottom: 7.5rem;
 }
